# netw

./: Cargo.toml  README.md  config.yaml
notes/: backlog.txt  bpf.md  dev.md  hash.md  notes.md  tests.md
src/: app.rs  database.rs  dns.rs  main.rs  net.rs  ui.rs
src/bpf/: filters.c  tcptop.c  udp.c
src/net/: mod.rs
src/util/: event.rs  mod.rs
tests/: simulate_traffic.sh
