[package]
name = "sekhmet"
version = "0.1.0"
authors = ["Mathieu Dolmen <mathieu.dolmen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc = "0.0.25"
ctrlc = "3.1.6"
clap = "2.33.3"

[dependencies.lazy_static]
version = "1.0"
