[package]
name = "sekhmet"
version = "0.6.0"
authors = ["Mathieu Dolmen <mathieu.dolmen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc      = "0.0.30"
ctrlc    = "3.1.6"
clap     = { version = "2.33.3", features = ["yaml"] }
libc     = "0.2.80"
socket2  = "0.3"
tui      = "0.14"
termion  = "1.5"
rusqlite = "0.24.2"
chrono   = "0.4.19"

# To cast an int to its enum equivalent
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"

[dependencies.lazy_static]
version = "1.0"
